--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 html{
     font-size: 62.5%;
